[RLS] Don't include scroll offset in cached clip for the position of the ancestor clipping layer.

This regressed when we stopped storing clearing clip caches after
scroll of the root layer. It was an oversight to miss this callsite.

Bug: 811486
Change-Id: Ie7b58304bd1cabfb1cd727bcdf0996d1c91e2e2c
Reviewed-on: https://chromium-review.googlesource.com/916722
Reviewed-by: vmpstr <vmpstr@chromium.org>
Commit-Queue: Chris Harrelson <chrishtr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#536645}
Former-commit-id: 0a4bc70992c31fa240b3782af6dab0a9d28bdc51